# numidium

./: .gitignore  Cargo.toml  README.md  example.brass  example_numidium.toml  numidium.py  numidium.toml  numidium.yml  pyproject.toml
.github/workflows/: github_release.yml
numidium/: __main__.py  brass.py  build.py  config.py  filesystem.py  install.py  instructionclasses.py  stage_mod.py
src/: common.rs  filesystem.rs  main.rs  modlists.rs  plugins.rs  structs.rs
src/entities/: game.rs  install.rs  mod.rs  modlist.rs  stagedmod.rs
